# Lapo-s-Task

./: .gitignore  install.sh  pyproject.toml  readME.md  requirements.txt
src/: __init__.py  cli.py  config.py  engine.py  hotkeys.py  storage.py  ui.py
